# ComfyUI-Smart-Removal

./: .comfyignore  .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
scripts/: install_argos_zh_en.py  plan_mask.py  verify_saved_plan.py
tests/: test_planner.py  test_universal_workflow_nodes.py  test_wire_regressions.py
web/: single-mask-editor-button.js
workflows/: ComfyUI-Smart-Removal.json
