[project]
name = "native-region-tile-planner-merge"
version = "0.1.1"
description = "Native-resolution mask-aware regional tiling and seam-safe merging nodes for ComfyUI local image editing workflows."
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.10,<2",
    "argostranslate>=1.9.6,<2",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/Liu-Bot24/ComfyUI-Smart-Removal"
Documentation = "https://github.com/Liu-Bot24/ComfyUI-Smart-Removal#readme"
"Bug Tracker" = "https://github.com/Liu-Bot24/ComfyUI-Smart-Removal/issues"

[tool.comfy]
PublisherId = "lq36821"
DisplayName = "Native Region Tile Planner & Merge"
